els-ASAP auto commit file/tag setroubleshoot-plugins-3.0.67-3.el7.src.rpm

--- a/src/NEWS
+++ b/src/NEWS
@@ -1,3 +1,8 @@
+setroubleshoot-plugins 3.0.67                             2018-05-15
+- bind_ports: Do not use when there are no allowed_target_types
+- Fix summary and "if" text for AVCs with unknown target path
+- Update translations
+
 setroubleshoot-plugins 3.0.66                             2017-10-31
  - Fix catchall plugin message for process2
  - Correct grammatical errors
