--- a/src/po/ru.po
+++ b/src/po/ru.po
@@ -8,18 +8,17 @@
 # Yulia <ypoyarko@redhat.com>, 2006, 2008, 2009, 2010, 2012
 # Yulia <yulia.poyarkova@redhat.com>, 2013
 # Игорь Горбунов <igor.gorbounov@gmail.com>, 2013
-# Terry Chuang <tchuang@redhat.com>, 2016. #zanata
 # yuliya <ypoyarko@redhat.com>, 2016. #zanata
 # Vit Mojzis <vmojzis@redhat.com>, 2017. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-10-31 20:57+0100\n"
+"POT-Creation-Date: 2017-11-20 17:16+0100\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2017-09-01 08:32-0400\n"
+"PO-Revision-Date: 2017-11-20 11:36-0500\n"
 "Last-Translator: Copied by Zanata <copied-by-zanata@zanata.org>\n"
 "Language-Team: Russian (http://www.transifex.com/projects/p/fedora/language/"
 "ru/)\n"
@@ -197,6 +196,20 @@ msgid ""
 "bug report.\n"
 "    "
 msgstr ""
+"\n"
+"    Приложение $SOURCE попыталось загрузить $TARGET_PATH, что\n"
+"    требует перемещения текста. Это представляет потенциальную проблему с\n"
+"    точки зрения безопасности. Иногда библиотеки\n"
+"    написаны некорректно и требуют разрешения на перемещение. Документ\n"
+"    <a href=\"http://people.redhat.com/drepper/selinux-mem.html\">Тесты "
+"защиты памяти SELinux</a>\n"
+"    объясняет, как отказаться от использования такой возможности. Можно "
+"настроить\n"
+"    SELinux так, чтобы временно разрешить $TARGET_PATH использовать "
+"перемещение,\n"
+"    пока библиотека не будет исправлена. Пожалуйста, создайте \n"
+"    запрос в Bugzilla для этого пакета.\n"
+"    "
 
 #: ../src/allow_execmod.py:45
 msgid ""
@@ -229,6 +242,16 @@ msgid ""
 "\n"
 "    "
 msgstr ""
+"\n"
+"    Если вы доверяете $TARGET_PATH, можно изменить контекст\n"
+"    файла на textrel_shlib_t. «chcon -t textrel_shlib_t \n"
+"    $TARGET_PATH»\n"
+"    Также необходимо изменить контексты файлов в системе, используемые по "
+"умолчанию, чтобы они сохранились даже при повторной разметке. \n"
+"    «semanage fcontext -a -t textrel_shlib_t '$FIX_TARGET_PATH'»\n"
+"\n"
+"    \n"
+"    "
 
 #: ../src/allow_execstack.py:60
 msgid ""
@@ -260,6 +283,26 @@ msgid ""
 "file a bug report.\n"
 "    "
 msgstr ""
+"\n"
+"    Приложение $SOURCE попыталось сделать свой стек\n"
+"    исполняемым, что представляет потенциальную угрозу безопасности.\n"
+"    В этом не должно быть необходимости. \n"
+"    Память стека не является исполняемой в большинстве ОС\n"
+"    на сегодняшний день, и в будущем это не изменится.\n"
+"    Исполняемый стек представляет собой исключительно серьезную проблему "
+"безопасности.\n"
+"    Ошибка execstack может быть вызвана вредоносными программами.\n"
+"    Иногда приложения, написанные\n"
+"    некорректно, могут запросить это разрешение. Документ\n"
+"    <a href=\"http://people.redhat.com/drepper/selinux-mem.html\">Тесты "
+"защиты памяти SELinux</a>\n"
+"    объясняет, как исключить использование такой возможности. Если $SOURCE "
+"не\n"
+"    работает, когда это необходимо, можно настроить SELinux так, \n"
+"    чтобы временно разрешить такую возможность, пока приложение не будет "
+"исправлено. Пожалуйста, \n"
+"    создайте запрос в Bugzilla для этого пакета.\n"
+"    "
 
 #: ../src/allow_execstack.py:79
 msgid ""
@@ -271,6 +314,11 @@ msgid ""
 "    execstack -s LIBRARY_PATH.\n"
 "    "
 msgstr ""
+"\n"
+"Иногда для библиотеки может быть случайно выбран флаг execstack.\n"
+"Его  можно снять, выполнив execstack -c LIBRARY_PATH.\n"
+"После этого перезапустите приложение.\n"
+"Если это не помогло, снова установите флаг: execstack -s LIBRARY_PATH. "
 
 #: ../src/allow_execstack.py:89
 msgid ""
@@ -338,6 +386,20 @@ msgid ""
 "    this access attempt could signal an intrusion attempt.\n"
 "    "
 msgstr ""
+"\n"
+"    SELinux запретил демону ftp доступ $ACCESS к файлам в файловой системе "
+"CIFS.\n"
+"    CIFS (Comment Internet File System) — сетевая файловая система,\n"
+"   аналогичная SMB (<a href=\"http://www.microsoft.com/mind/1196/cifs."
+"asp\">http://www.microsoft.com/mind/1196/cifs.asp</a>).\n"
+"    Демон ftp попытался прочесть данные из смонтированной системы этого типа."
+"\n"
+"    Так как CIFS не поддерживает низкоуровневое маркирование SELinux, \n"
+"    все файлы и каталоги имеют один и тот же контекст безопасности.\n"
+"     \n"
+"    Если вы не настраивали демон ftp на чтение файлов из CIFS,\n"
+"    попытка получения доступа может служить сигналом вторжения.\n"
+"    "
 
 #: ../src/allow_ftpd_use_cifs.py:46
 msgid ""
@@ -408,6 +470,20 @@ msgid ""
 "    this access attempt could signal an intrusion attempt.\n"
 "    "
 msgstr ""
+"\n"
+"    SELinux запретил доступ $ACCESS к файлам на разделе NFS.\n"
+"    NFS (Network Filesystem) — сетевая файловая система, обычно используемая "
+"в системах UNIX/Linux.\n"
+"\n"
+"    Демон ftp попытался прочесть данные из смонтированной системы этого типа."
+"\n"
+"    Так как NFS система не поддерживает низкоуровневое маркирование SELinux, "
+"\n"
+"    все файлы и каталоги имеют один и тот же контекст безопасности.\n"
+"    \n"
+"    Если вы не настраивали демон ftp на чтение файлов из NFS,\n"
+"    попытка получения доступа может служить сигналом вторжения.\n"
+"      "
 
 #: ../src/allow_ftpd_use_nfs.py:47
 msgid ""
@@ -564,6 +640,16 @@ msgid ""
 "    to bind to $PORT_NUMBER, this could signal an intrusion attempt.\n"
 "    "
 msgstr ""
+"\n"
+"    SELinux запретил $SOURCE подключаться сетевому порту $PORT_NUMBER, "
+"которому не присвоен тип SELinux.\n"
+"    Если $SOURCE должен иметь возможность подключения к этому порту, можно "
+"использовать команду <i>semanage</i> для добавления  $PORT_NUMBER к типу, "
+"которому $SOURCE_TYPE может быть сопоставлен (%s).\n"
+"    \n"
+"Если $SOURCE не должен\n"
+"    соответствовать $PORT_NUMBER, возможно, имеет место попытка вторжения.\n"
+"    "
 
 #: ../src/bind_ports.py:38
 #, python-format
@@ -636,6 +722,14 @@ msgid ""
 "    the access.\n"
 "    "
 msgstr ""
+"\n"
+"\n"
+"    SELinux отклонил запрос доступа от $SOURCE. Текущие настройки  \n"
+"    логических переменных не разрешают доступ. Такой запрос не \n"
+"    ожидается от $SOURCE и может свидетельствовать о \n"
+"    попытке вторжения. Если же вы действительно хотите разрешить доступ,  \n"
+"    потребуется изменить соответствующие логические переменные. \n"
+"    "
 
 #: ../src/catchall_boolean.py:45
 msgid ""
@@ -646,6 +740,12 @@ msgid ""
 "\n"
 "    "
 msgstr ""
+"\n"
+"   Ограничиваемые процессы можно настроить так, чтобы они выполнялись с "
+"различными уровнями доступа. При этом доступ можно разрешать и запрещать с "
+"помощью логических переменных SELinux.\n"
+"\n"
+"    "
 
 #: ../src/catchall_boolean.py:62
 #, python-format
@@ -704,6 +804,10 @@ msgid ""
 "Then execute:\n"
 "restorecon -v '$FIX_TARGET_PATH'\n"
 msgstr ""
+"# semanage fcontext -a -t FILE_TYPE '$FIX_TARGET_PATH'\n"
+"где FILE_TYPE может принимать значения: %s. \n"
+"Затем выполните: \n"
+"restorecon -v '$FIX_TARGET_PATH'\n"
 
 #: ../src/catchall.py:29 ../src/chrome.py:29 ../src/mozplugger.py:29
 #: ../src/mozplugger_remove.py:29
@@ -941,7 +1045,9 @@ msgstr "Необходимо изменить метку для $TARGET_BASE_PAT
 msgid "\n"
 "    SELinux is preventing $SOURCE_PATH the \"$ACCESS\" capability.\n"
 "    "
-msgstr ""
+msgstr "\n"
+"    SELinux запретил операцию \"$ACCESS\" для $SOURCE_PATH.  \n"
+"    "
 
 #: ../src/dac_override.py:32
 msgid ""
@@ -982,6 +1088,13 @@ msgid ""
 "If you see PATH record check ownership/permissions on file, and fix it,\n"
 "otherwise report as a bugzilla."
 msgstr ""
+"\n"
+"Включите аудит:\n"
+"# auditctl -w /etc/shadow -p w\n"
+"Попытайтесь заново создать AVC, после чего выполните:\n"
+"# ausearch -m avc -ts recent\n"
+"Если запись PATH осуществляет проверку разрешений файла, исправьте это,  \n"
+"в противном случае создайте запрос в Bugzilla."
 
 #: ../src/device.py:29
 msgid ""
@@ -990,6 +1103,10 @@ msgid ""
 "$TARGET_PATH.\n"
 "    "
 msgstr ""
+"\n"
+"    SELinux запрещает $SOURCE_PATH доступ «$ACCESS» к устройству "
+"$TARGET_PATH.  \n"
+"    "
 
 #: ../src/device.py:33
 msgid ""
@@ -1022,6 +1139,33 @@ msgid ""
 "\n"
 "    "
 msgstr ""
+"\n"
+"\n"
+"    SELinux запретил $SOURCE доступ «$ACCESS» к устройству $TARGET_PATH.\n"
+"    $TARGET_PATH отмечено неверно и имеет стандартную метку каталога /dev.\n"
+"    Все символьные и блочные устройства должны иметь свою метку.\n"
+"\n"
+"    Можно попробовать изменить метку, выполнив команду\n"
+"\n"
+"    restorecon -v '$TARGET_PATH'.\n"
+"\n"
+"    Если устройство по прежнему отмечено как device_t, это означает ошибку в "
+"политике SELinux.\n"
+"\n"
+"    Тогда, пожалуйста, создайте запрос в Bugzilla.\n"
+"\n"
+"    Если вы просмотрите метки схожих устройств с помощью команды \n"
+"    ls -lZ /dev/SIMILAR и найдете тип, который подходит $TARGET_PATH,\n"
+"    можно выполнить chcon -t SIMILAR_TYPE '$TARGET_PATH'.\n"
+"    Если это поможет, сохраните изменения:\n"
+"    semanage fcontext -a -t SIMILAR_TYPE '$TARGET_PATH'\n"
+"\n"
+"    Если restorecon изменяет контекст, это означает, что приложение, "
+"создавшее устройство, не использовало\n"
+"    SELinux API.  Если вы знаете, какое приложение создало это устройство, "
+"пожалуйста, создайте запрос в Bugzilla для этого приложения.\n"
+"\n"
+"    "
 
 #: ../src/device.py:56
 msgid ""
@@ -1169,6 +1313,19 @@ msgid ""
 "    for the destination.\n"
 "    "
 msgstr ""
+"\n"
+"    SELinux запретил $SOURCE создавать файл с контекстом $SOURCE_TYPE в "
+"файловой системе.\n"
+"    Обычно это происходит при использовании команды «cp» для сохранения "
+"контекста файла при\n"
+"    копировании (например, «cp -a»). Не все файловые контексты должны "
+"сохранять постоянство в разных файловых системах.\n"
+"    Например, тип iso9660_t доступных только для чтения файлов не должен "
+"использоваться в\n"
+"    системах, допускающих запись. В этом случае лучше подойдёт команда «cp -"
+"p», так как она адаптирует\n"
+"    файловый контекст в зависимости от назначения.\n"
+"    "
 
 #: ../src/filesystem_associate.py:40
 msgid ""
@@ -1274,6 +1431,26 @@ msgid ""
 "    script types.\n"
 "    "
 msgstr ""
+"\n"
+"    SELinux запретил доступ $ACCESS для httpd к файлам http.\n"
+"\n"
+"    Обычно httpd обладает полным доступом к файлам\n"
+"    с контекстом http.  Уровень защиты этого компьютера усилен\n"
+"    в то время как переменная $BOOLEAN отключена,\n"
+"    поэтому необходимо отдельно присвоить метки файлам.\n"
+"    Если файл представляет собой сценарий cgi,\n"
+"    ему должна быть присвоена метка httpd_TYPE_script_exec_t.\n"
+"    Если файл предназначен только для чтения, \n"
+"    он должен быть отмечен как  httpd_TYPE_content_t.\n"
+"    Если же файл должен быть доступен для записи,     он должен быть отмечен "
+"как httpd_TYPE_script_rw_t или \n"
+"    httpd_TYPE_script_ra_t. Команда chcon позволяет изменить контекст.\n"
+"    За подробной информацией обратитесь к справочной странице \n"
+"    \"man httpd_selinux\" или  \n"
+"    <a href=\"http://fedora.redhat.com/docs/selinux-apache-fc3\">FAQ</a>.\n"
+"    «TYPE» может принимать значения «sys», «user», «staff» и \n"
+"    некоторые другие значения типов сценариев.\n"
+"    "
 
 #: ../src/httpd_unified.py:50
 msgid ""
@@ -1313,6 +1490,17 @@ msgid ""
 "for more information on setting up httpd and selinux.\n"
 "    "
 msgstr ""
+"\n"
+"    SELinux запрещает httpd ($SOURCE_PATH) доступ $ACCESS к $TARGET_PATH.\n"
+"\n"
+"    Сценариям httpd не разрешено осуществлять запись без \n"
+"    явной маркировки всех файлов. Если $TARGET_PATH допускает запись, \n"
+"    то его надо отметить как httpd_sys_rw_content_t или "
+"httpd_sys_ra_content_t\n"
+"    (если требуется только добавление).\n"
+"    Подробную информацию можно найти на странице помощи\n"
+"    «man httpd_selinux».\n"
+"    "
 
 #: ../src/httpd_write_content.py:40 ../src/qemu_blk_image.py:45
 #: ../src/samba_share.py:45 ../src/swapfile.py:45 ../src/xen_image.py:48
@@ -1344,6 +1532,16 @@ msgid ""
 "    serious issue. Your system may very well be compromised.\n"
 "    "
 msgstr ""
+"\n"
+"    SELinux запретил $SOURCE изменять $TARGET.  \n"
+"    $SOURCE пытался изменить поведение ядра или вставить код в ядро. \n"
+"    Для всех приложений, которым необходим такой уровень доступа, \n"
+"    должна существовать отдельная политика. \n"
+"    Если скомпрометированное приложение попытается модифицировать ядро,\n"
+"    будет сгенерировано AVC. \n"
+"    Это является серьёзной проблемой и может служить индикатором того, \n"
+"    что система была скомпрометирована.\n"
+"     "
 
 #: ../src/kernel_modules.py:44 ../src/selinuxpolicy.py:44
 msgid ""
@@ -1496,6 +1694,15 @@ msgid ""
 "    label of the file or directory.\n"
 "    "
 msgstr ""
+"\n"
+"    SELinux запретил $SOURCE монтировать файловую систему в\n"
+"    «$TARGET_PATH» с типом «$TARGET_TYPE». По умолчанию\n"
+"    SELinux ограничивает монтирование файловых систем \n"
+"    некоторыми файлами или\n"
+"    каталогами (имеющими атрибут mountpoint). \n"
+"    Тип «$TARGET_TYPE» не имеет этого атрибута.  \n"
+"    Можно попробовать изменить метку файла или каталога.\n"
+"    "
 
 #: ../src/mounton.py:43
 msgid ""
@@ -2042,6 +2249,10 @@ msgid ""
 "sandbox -X -t sandbox_net_t $SOURCE_PATH\n"
 "Please read 'sandbox' man page for more details.\n"
 msgstr ""
+"необходимо изменить type. sandbox_web_t или sandbox_net_t.\n"
+"Пример:\n"
+"sandbox -X -t sandbox_net_t $SOURCE_PATH\n"
+"За подробной информацией обратитесь к справочной странице sandbox.\n"
 
 #: ../src/selinuxpolicy.py:29
 msgid "\n"
@@ -2063,6 +2274,16 @@ msgid ""
 "    may very well be compromised.\n"
 "    "
 msgstr ""
+"\n"
+"    SELinux запретил $SOURCE модифицировать $TARGET.\n"
+"    $SOURCE пытался изменить конфигурацию политики selinux.\n"
+"    Для всех приложений, которым необходим такой уровень доступа,\n"
+"    должна существовать отдельная политика.\n"
+"    Если скомпрометированное приложение попытается изменить политику,\n"
+"    будет сгенерировано AVC.\n"
+"    Это является серьезной проблемой и может служить индикатором того, \n"
+"    что система могла быть скомпрометирована.\n"
+"    "
 
 #: ../src/setenforce.py:27
 msgid "If you did not directly cause this AVC through testing."
@@ -2207,6 +2428,15 @@ msgid ""
 "    issue. Your system may very well be compromised.\n"
 "    "
 msgstr ""
+"\n"
+"    SELinux запретил $SOURCE загружать модуль ядра.\n"
+"    Для всех приложений, которым необходим такой уровень доступа,\n"
+"    должна существовать отдельная политика.\n"
+"    Если скомпрометированное приложение попытается изменить модуль,\n"
+"    будет сгенерировано AVC.\n"
+"    Это является серьёзной проблемой и может служить индикатором того, \n"
+"    что система была скомпрометирована.\n"
+"     "
 
 #: ../src/sys_module.py:46
 msgid ""
@@ -2223,7 +2453,9 @@ msgid ""
 "\n"
 "    SELinux is preventing $SOURCE_PATH the \"sys_resource\" capability.\n"
 "    "
-msgstr ""
+msgstr "\n"
+"   SELinux запрещает возможность $SOURCE_PATH «sys_resource».\n"
+"    "
 
 #: ../src/sys_resource.py:32
 msgid ""
@@ -2235,6 +2467,13 @@ msgid ""
 "disk space, please report this as a bug.\n"
 "    "
 msgstr ""
+"\n"
+"Ограниченные домены не должны требовать «sys_resource». Обычно это означает, "
+"что не хватает какого-либо ресурса, например, места на диске, памяти, квоты "
+"и т.д. Освободите место на диске и это \n"
+"AVC-сообщение должно исчезнуть. Если проблема сохранится после очистки "
+"диска, создайте отчет об ошибке.\n"
+"    "
 
 #: ../src/sys_resource.py:39
 msgid ""
@@ -2287,6 +2526,16 @@ msgid ""
 "\n"
 "    "
 msgstr ""
+"\n"
+"SELinux запретила действие, запрошенное $SOURCE, программой изменения\n"
+"состояния видео оборудования. Эта программа обычно выполняет небезопасные\n"
+"операции памяти, в то же время именно так поступают и вредоносные программы,\n"
+"замаскированные под vbetool.\n"
+"Эта утилита восстанавливает состояние видео при возврате системы из\n"
+"ждущего режима. Если компьютер не возобновляет работу, остаётся только\n"
+"разрешить это действие, тем самым ослабив защиту системы.\n"
+"\n"
+"    "
 
 #: ../src/vbetool.py:45 ../src/wine.py:56
 msgid ""
@@ -2355,6 +2604,25 @@ msgid ""
 "\n"
 "    "
 msgstr ""
+"\n"
+"SELinux запретил выполнение операции, запрошенной wine-preloader, программой "
+"для запуска приложений Windows на Linux. Известно, что эта программа "
+"использует небезопасные операции с системной памятью, как и вредоносные "
+"программы, маскирующиеся под wine. Если вы\n"
+"пытаетесь запустить приложение Windows, можно либо разрешить\n"
+"данную операцию, тем самым ослабив защиту системы,\n"
+"либо отказаться от использования приложений Windows под Linux. Если же вы не "
+"пытались запустить приложение Windows, это означает, что вы атакованы одной "
+"из таких вредоносных программ или кто-то пытается использовать вашу систему.\n"
+"\n"
+"Обратитесь за более подробной информацией к статье \n"
+"\n"
+"http://wiki.winehq.org/PreloaderPageZeroProblem\n"
+"\n"
+"Там описаны другие проблемы, с которыми сталкивается программа wine из-за "
+"небезопасных операций с памятью, и возможные пути их решения.\n"
+"\n"
+"    "
 
 #: ../src/wine.py:66
 msgid ""
